[package]
name = "spain-vat-id"
authors = ["José Aguilera <hello@jsgm.dev>"]
version = "0.1.0"
edition = "2021"
description = "Spanish VAT ID numbers validation/verification"
license = "Apache-2.0"
homepage = "https://github.com/jsgm/spain-vat-id"
repository = "https://github.com/jsgm/spain-vat-id"
keywords = [
    "spain",
    "nif",
    "nie",
    "dni",
    "validator"
]
categories = ["algorithms", "parsing"]
include = [
    "src/lib.rs",
    "Cargo.toml",
    "README.md",
]

[lib]
crate-type = ["cdylib"]